fixed text input appearance on iphones

--- a/src/App.css
+++ b/src/App.css
@@ -334,6 +334,7 @@ textarea {
 }
 
 input[type="submit"],
+input[type="text"],
 button {
   -webkit-appearance: none;
   border-radius: 0;
